# biocomputation

./: .gitignore  Cargo.toml  input.json
data/: data1.txt
src/: candidate.rs  crossover.rs  dataitem.rs  dataset.rs  ga_spec.rs  main.rs  mutation.rs  popgenspec.rs  population.rs  rule.rs  selection.rs
