[package]
name = "biocomputation"
version = "0.1.0"
authors = ["Ahmed Miljau <ahmed.miljau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
regex = "1.3.9"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.115", features=["derive"]}
serde_json = "1.0.57"

